Change theme
Help
Press space for more information.
Show links for this issue (Shortcut: i, l)
Copy issue ID
Previous Issue (Shortcut: k)
Next Issue (Shortcut: j)
Sign in to use full features.
Vote: I am impacted
Notification menu
Refresh (Shortcut: Shift+r)
Go home (Shortcut: u)
Use Markdown for this comment
Change issue status back to 'Assigned'
Remove item
Show all 8 items in the list
Pending code changes (auto-populated)
Tracks the current rank of this item in the teams backlog [ID: 1225362]
Build number, such as 117.0.5911.2 [ID: 1223033]
[ID: 1223031]
Blink>JavaScript
Select items in the list
Supplemental component tags only. Set main component first. [ID: 1222907]
[ID: 1223136]
he CWE ID for the type of security defect the current issue is describing. [ID: 1410892]
Design doc to be reviewed. [ID: 1223032]
[ID: 1223131]
How many engineer days the task is estimated to take. [ID: 1225337]
[ID: 1223081]
[ID: 1223087]
[ID: 1223134]
Milestone(s) impacted by this issue. [ID: 1223085]
Date of next expected progress update or deadline for providing requested information. [ID: 1225154]
[ID: 1223083]
[ID: 1223084]
[ID: 1223086]
[ID: 1223034]
Link to incidents in IRM as a result of this ticket. [ID: 1300460]
[ID: 1223088]
[ID: 1223135]
This field contains Gerrit urls of code changes that ‘fix’ a security bug (i.e., excluding logging/cleanup commits) and is used when a singular fix cannot be uniquely identified from the existing “Code Changes” field. The change can be in the chromium repo or any other third_party repo. [ID: 1358989]
[ID: 1305533]
Size : Average days
XS : 1
S : 2
M : 3
L : 5
XL : 8 [ID: 1314202]
Set severity, which reflects how much the issue affects the use of the product
Blink
[ID: 1253656]
Set the version(s) of the product affected by this issue (comma-separated list)
Set the version(s) of the product in which the issue should be fixed (comma-separated list)
Set the version(s) of the product in which the issue fix was verified (comma-separated list)
Set if this issue occurs in production
Set Reporter
Set Type
Set priority, which reflects how soon the issue should be fixed
Set Status
Set Assignee
Set Verifier
View or edit staffing
View issue level access limits(Press Alt + Right arrow for more information)
Description
#1Version: V8 11.4.73, or Chromium 114.0.5708.0. Originally observed in NodeJS 19.8.1
OS: Windows, Linux (likely all)
Architecture: x64 (likely all)
Case 1:
What steps will reproduce the problem?
1. In Chrome, loadhttps://enactjs.com/sampler/sandstone/?path=/story/sandstone-virtuallist-virtualgridlist--virtual-grid-list&args=dataSize:100000
2. Open web inspector
3. Go to Memory tab
4. Press "take snapshot"
What is the expected output?
Time to get the heap snapshot should be as fast as possible.
What do you see instead?
It takes a lot of time to take the snapshot.
Case 2
What steps will reproduce the problem?
1. Install Node 19.8.1https://github.com/microsoft/TypeScript
2. Clone git repository of Typescript from
3. Install hereby in path (i.e. using npm install -g hereby)
4. In typescript folder, npm ci
5. Run: NODE_OPTIONS="--max-old-space-size=100 --heapsnapshot-near-heap-limit=10" hereby lint
What is the expected output?
The time to generate the snapshots should be fast
What do you see instead?
The time to generate the snapshots is very slow
Other information
This comes from an investigation of NodeJS heap snapshots taking the range of 40-60 minutes, and using ETW to profile possible problems. We identified at least two issues:
* Poor quality of the heap snapshot string storage hash key.
* Line ends going through slow path all the time.
Please use labels and text to provide additional information.